<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
        android:background="@drawable/med"  >


       <TextView
	android:id="@+id/textNom"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/nom"
	android:textStyle="bold"
	android:textColor="#FF0000"
	/>
   
   	<EditText
	android:id="@+id/nom"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:hint="@string/nom_hint"
	android:layout_toRightOf="@id/textNom"
	android:layout_alignParentRight="true"
	android:inputType="text"
	/>
   	
   	 <TextView
	android:id="@+id/textPrenom"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/prenom"
	android:textStyle="bold"
	android:textColor="#FF0000"
	android:gravity="left"
	android:layout_below="@id/nom"
	/>
   	
   	<EditText
	android:id="@+id/prenom"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:hint="@string/prenom_hint"
	android:layout_below="@id/nom"
	android:layout_toRightOf="@id/textPrenom"
	android:layout_alignParentRight="true"
	android:inputType="text"
	/>
   	
   	<TextView
	android:id="@+id/textDateRendezVous"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/date"
	android:textStyle="bold"
	android:textColor="#FF0000"
	android:gravity="left"
	android:layout_below="@id/prenom"
	/>
   	
   	<DatePicker
	android:id="@+id/DateDuRendezVous"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_centerHorizontal="true"
	android:layout_below="@id/textDateRendezVous"
	android:startYear="1930"
	android:endYear="2032" />
   	
   	<TextView
	android:id="@+id/textHeureRendezVous"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/time"
	android:textStyle="bold"
	android:textColor="#FF0000"
	android:gravity="left"
	android:layout_below="@id/DateDuRendezVous"
	/>
   	<TimePicker
	android:id="@+id/HeureDuRendezVous"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_centerHorizontal="true"
	android:layout_below="@id/textHeureRendezVous" />
   	
   	<Button
	android:id="@+id/Enregistrer"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/save" 
	android:textStyle="bold"
	android:textColor="#FF0000"
	android:layout_below="@id/HeureDuRendezVous"/>
   	
   	
   	
   	
   	
   	
   	
   	
   	

</RelativeLayout>