	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cabinet.MainActivity" 
    android:background="@drawable/sante" 

    >

	     <Button
	         android:id="@+id/bouton3"
	         android:layout_width="fill_parent"
	         android:layout_height="100px"
	         android:layout_alignLeft="@+id/bouton2"
	         android:layout_below="@+id/bouton2"
	         android:layout_marginTop="32dp"
	         android:text="@string/third"
	         android:textColor="#FF0000"
	         android:textSize="30px"
	         android:textStyle="bold" />

	     <Button
	         android:id="@+id/bouton4"
	         android:layout_width="fill_parent"
	         android:layout_height="100px"
	         android:layout_alignLeft="@+id/bouton3"
	         android:layout_below="@+id/bouton3"
	         android:layout_marginTop="39dp"
	         android:text="@string/fourth"
	         android:textColor="#FF0000"
	         android:textSize="30px"
	         android:textStyle="bold" />

	     <Button
	         android:id="@+id/bouton1"
	         android:layout_width="fill_parent"
	         android:layout_height="100px"
	   android:layout_centerHorizontal="true"
	         android:layout_marginTop="32dp"
	         android:text="@string/first"
	         android:textColor="#FF0000"
	         android:textSize="30px"
	         android:textStyle="bold" />

	     <Button
	         android:id="@+id/bouton2"
	         android:layout_width="fill_parent"
	         android:layout_height="100px"
	         android:layout_alignLeft="@+id/bouton1"
	         android:layout_below="@+id/bouton1"
	         android:layout_marginTop="33dp"
	         android:text="@string/second"
	         android:textColor="#FF0000"
	         android:textSize="30px"
	         android:textStyle="bold" />

</RelativeLayout>
